[package]
name = "linux-media-sys"
version = "0.2.0"
edition = "2024"
authors = ["eldesh <nephits@gmail.com>"]
description = "A Rust library providing access to the Linux Media Subsystem."
license = "MIT"
readme = "README.md"
repository = "https://github.com/eldesh/linux-media-sys"

[dependencies]
libc = "0.2.170"

[build-dependencies]
bindgen = "0.71.0"

